- updated index.html template - updated static.js

--- a/blueprints/webrootIndex.html
+++ b/blueprints/webrootIndex.html
@@ -9,10 +9,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="google-site-verification" content="QG7i1pPXErvR4cwdAxu1sYdiM6cmpGkcXxKELeWolH8" />
-		<meta property="og:image" content="http://www.example.de/images/example.png" />
+		<meta property="og:image" content="%uri%/images/example.png" />
 		<meta property="og:image:width" content="200px" />
 		<meta property="og:image:height" content="200px" />
-		<meta property="og:url" content="http://www.example.de/" />
+		<meta property="og:url" content="%uri%" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Example Site" />
 		<meta property="og:description" content="Beispiel Beschreibung" />
